# Copyright 2015 Brian Smith.
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHORS DISCLAIM ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

[package]
authors = ["Brian Smith <brian@briansmith.org>"]
description = "Web PKI X.509 Certificate Verification."
documentation = "https://briansmith.org/rustdoc/webpki/"
license-file = "LICENSE"
name = "webpki"
readme = "README.md"
repository = "https://github.com/briansmith/webpki"
version = "0.9.2"

include = [
    "Cargo.toml",

    "LICENSE",
    "README.md",

    "src/",
    "src/cert.rs",
    "src/der.rs",
    "src/name.rs",
    "src/signed_data.rs",
    "src/trust_anchor_util.rs",
    "src/verify_cert.rs",
    "src/webpki.rs",
    "src/cert.rs",
    "src/der.rs",
    "src/name.rs",
    "src/signed_data.rs",
    "src/trust_anchor_util.rs",
    "src/verify_cert.rs",
    "src/webpki.rs",

    "src/data/**/*",

    "third-party/chromium/**/*",
]

[lib]
name = "webpki"
path = "src/webpki.rs"

[features]
default = ["trust_anchor_util"]
trust_anchor_util = []

[dependencies]
ring = "0.6.3"
rustc-serialize = "0.3.15"
time = "0.1"
untrusted = "0.3"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
