# Copyright 2015 Brian Smith.
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHORS DISCLAIM ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

[package]
authors = ["Brian Smith <brian@briansmith.org>"]
categories = ["cryptography", "no-std"]
description = "Web PKI X.509 Certificate Verification."
edition = "2018"
license-file = "LICENSE"
name = "webpki"
readme = "README.md"
repository = "https://github.com/briansmith/webpki"
rust-version = "1.61.0"
version = "0.22.4"

include = [
    "Cargo.toml",

    "LICENSE",
    "README.md",

    "src/**/*.rs",
    "src/data/**/*",

    "tests/dns_name_tests.rs",
    "tests/integration.rs",
    "tests/misc/serial_neg.der",
    "tests/misc/serial_zero.der",
    "tests/netflix/ca.der",
    "tests/netflix/ee.der",
    "tests/netflix/inter.der",
    "tests/ed25519/ca.der",
    "tests/ed25519/ee.der",

    "third-party/chromium/**/*",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "webpki"

[features]
alloc = ["ring/alloc"]
std = ["alloc"]

[dependencies]
ring = { version = "0.17.2", default-features = false }
untrusted = "0.9"

[dev-dependencies]
base64 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[workspace]
members = [
    # Intentionally not a default member.
    "rcgen-tests",
]
